--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #edf462; }
+  background: #59c043; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #69e7cc; }
+  background: #6b5147; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #d3df10; }
+  background: #608b90; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8805fc; }
+  background: #5f9eb9; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #1d1225; }
+  background: #ed973c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #199763; }
+  background: #3df376; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e92f36; }
+  background: #5fb63c; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2b0c62; }
+  background: #231680; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #91a5cc; }
+  background: #79a628; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #17a149; }
+  background: #ac60d6; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6abd27; }
+  background: #cbd5cd; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b7f502; }
+  background: #aa44ce; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e46cc8; }
+  background: #cf3362; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3bdf6d; }
+  background: #3ac64d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #dcd8c5; }
+  background: #a43e0f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #8f1b79; }
+  background: #c2cfeb; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1df9df; }
+  background: #80cae7; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #925185; }
+  background: #b728b5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #910abf; }
+  background: #83dea4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #564aee; }
+  background: #fcb6cd; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #e429c4; }
+  background: #f17668; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #091aa1; }
+  background: #5b7316; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #173723; }
+  background: #b5a036; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #209022; }
+  background: #1eebb4; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #7c950a; }
+  background: #5edb7e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2ef5b1; }
+  background: #956894; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #821474; }
+  background: #b782bf; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #da63d7; }
+  background: #e1b3cd; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #8c5063; }
+  background: #af767e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #753fca; }
+  background: #0f6550; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #65bc14; }
+  background: #3e0975; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #05188f; }
+  background: #877228; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #18ed51; }
+  background: #5420ac; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #01e3d8; }
+  background: #a52157; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #664260; }
+  background: #7db0a0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #acf3b9; }
+  background: #9ccbcf; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #7e49a4; }
+  background: #8f3caf; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #963369; }
+  background: #333926; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #52251d; }
+  background: #f809b6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #4c68ad; }
+  background: #27c45f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8660a7; }
+  background: #faeb38; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #622e36; }
+  background: #c1143e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0dcd8b; }
+  background: #a833f2; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #e21348; }
+  background: #2a2230; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #36e7ea; }
+  background: #79e8f3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bf653b; }
+  background: #090e3b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #853473; }
+  background: #d960f5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #124d69; }
+  background: #d68f79; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #aaacc6; }
+  background: #1c1519; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #21d4f7; }
+  background: #e370fd; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c98fea; }
+  background: #1ed7a4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4f08bf; }
+  background: #dc32d0; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #bf354a; }
+  background: #8cc561; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2e17bc; }
+  background: #f7f960; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2ff8ca; }
+  background: #f8516a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b396d5; }
+  background: #e37425; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #eadfba; }
+  background: #f84cf3; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #113d63; }
+  background: #a511e4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #e4b973; }
+  background: #9e298f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f7cdc0; }
+  background: #14fecd; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1c9d89; }
+  background: #6f6a61; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d3a7bc; }
+  background: #0bc1af; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #a433eb; }
+  background: #1fda22; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ba96b0; }
+  background: #520114; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #967d0d; }
+  background: #9c43db; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #80375b; }
+  background: #63c07c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f6157b; }
+  background: #525f5f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #765b32; }
+  background: #d81ac3; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #69c8cb; }
+  background: #b251b9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4e30a0; }
+  background: #758b81; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ab2b41; }
+  background: #587457; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #794323; }
+  background: #4c203f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b56b58; }
+  background: #440ac0; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #a44ccf; }
+  background: #c0647c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #aa35a9; }
+  background: #43070e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7e41f4; }
+  background: #e5237d; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7f8a4c; }
+  background: #292b55; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #851d71; }
+  background: #321c62; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #bfc897; }
+  background: #a5d155; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #66e6cc; }
+  background: #21ccb4; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #213f94; }
+  background: #01c53f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #e7692f; }
+  background: #221717; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #598f58; }
+  background: #d06d4e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #37c8b8; }
+  background: #a24f52; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6d400c; }
+  background: #b80acb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #ec3d15; }
+  background: #560bb9; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #548278; }
+  background: #3560fc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b33dec; }
+  background: #693b9d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c4a3f1; }
+  background: #15b283; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #38a06b; }
+  background: #df1c4b; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #22ef52; }
+  background: #4b7cda; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #926b20; }
+  background: #8fc018; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #cc7517; }
+  background: #bb5f5c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5064b4; }
+  background: #ccfff4; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8cf8dc; }
+  background: #8d74c8; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ff2212; }
+  background: #102e69; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4f91ef; }
+  background: #cca481; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #28c16a; }
+  background: #e9d045; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1b1fba; }
+  background: #625f96; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e7df7c; }
+  background: #7ce6dc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15287,7 +15287,27 @@ option {
   transition: all 800ms;
   opacity: 1; }
 
+.time-sync-div {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+  grid-gap: 10px;
+  justify-content: start; }
+  .time-sync-div input {
+    width: 50px !important; }
+
+.four-dropdwon-div {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-gap: 10px; }
+
 @media screen and (max-width: 767px) {
+  .four-dropdwon-div {
+    grid-template-columns: 1fr;
+    margin-bottom: 25px; }
+    .four-dropdwon-div .form-group {
+      margin-bottom: 0px; }
+
   .system-settings-wrapper {
     flex-direction: column; }
     .system-settings-wrapper .sliding-left-section {
