--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #59c043; }
+  background: #259514; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6b5147; }
+  background: #c035c0; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #608b90; }
+  background: #4076b0; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5f9eb9; }
+  background: #75753e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ed973c; }
+  background: #992f15; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3df376; }
+  background: #2a2ced; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #5fb63c; }
+  background: #f64c18; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #231680; }
+  background: #5fdd56; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #79a628; }
+  background: #b6a7f6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ac60d6; }
+  background: #b2d9b1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #cbd5cd; }
+  background: #67f995; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #aa44ce; }
+  background: #a67fc1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #cf3362; }
+  background: #a70be9; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #3ac64d; }
+  background: #e7ea1f; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a43e0f; }
+  background: #878615; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c2cfeb; }
+  background: #d51a1b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #80cae7; }
+  background: #ce849a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #b728b5; }
+  background: #d79cc9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #83dea4; }
+  background: #978285; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #fcb6cd; }
+  background: #bcc692; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #f17668; }
+  background: #66b3d7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5b7316; }
+  background: #7c9de4; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b5a036; }
+  background: #21ad24; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #1eebb4; }
+  background: #e5dbef; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5edb7e; }
+  background: #1a308e; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #956894; }
+  background: #543cd1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b782bf; }
+  background: #359ad9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e1b3cd; }
+  background: #8bda98; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #af767e; }
+  background: #fc7f3c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0f6550; }
+  background: #e4b9a2; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3e0975; }
+  background: #2b7175; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #877228; }
+  background: #5ec9fa; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5420ac; }
+  background: #294f54; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a52157; }
+  background: #9f4c5d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7db0a0; }
+  background: #1e265c; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9ccbcf; }
+  background: #d86239; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8f3caf; }
+  background: #b04ee1; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #333926; }
+  background: #e3b923; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #f809b6; }
+  background: #7c3e90; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #27c45f; }
+  background: #13ca27; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #faeb38; }
+  background: #d6e3f3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #c1143e; }
+  background: #ce62b6; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a833f2; }
+  background: #5b3e99; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #2a2230; }
+  background: #06c2aa; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #79e8f3; }
+  background: #cfda7f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #090e3b; }
+  background: #926921; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d960f5; }
+  background: #199281; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #d68f79; }
+  background: #1879c5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1c1519; }
+  background: #a24cc6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e370fd; }
+  background: #810b24; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1ed7a4; }
+  background: #ea3440; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #dc32d0; }
+  background: #b0f733; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8cc561; }
+  background: #a7a199; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f7f960; }
+  background: #645e7c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f8516a; }
+  background: #515435; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e37425; }
+  background: #86f82d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f84cf3; }
+  background: #69704a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a511e4; }
+  background: #ac2040; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9e298f; }
+  background: #2672d5; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #14fecd; }
+  background: #e496b3; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6f6a61; }
+  background: #bcba4b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #0bc1af; }
+  background: #ee2e79; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1fda22; }
+  background: #cd2b8c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #520114; }
+  background: #3c02f6; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #9c43db; }
+  background: #357a71; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #63c07c; }
+  background: #3e7461; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #525f5f; }
+  background: #b9302d; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d81ac3; }
+  background: #a0cbce; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b251b9; }
+  background: #80099b; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #758b81; }
+  background: #533aea; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #587457; }
+  background: #b0e572; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4c203f; }
+  background: #248f16; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #440ac0; }
+  background: #0593ed; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c0647c; }
+  background: #284d37; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #43070e; }
+  background: #8c56be; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e5237d; }
+  background: #a85ac4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #292b55; }
+  background: #f2e614; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #321c62; }
+  background: #baeea2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a5d155; }
+  background: #725f2e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #21ccb4; }
+  background: #1a2d97; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #01c53f; }
+  background: #ecc0e1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #221717; }
+  background: #9cc9cc; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d06d4e; }
+  background: #db3093; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #a24f52; }
+  background: #2c7c5b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b80acb; }
+  background: #af1fa3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #560bb9; }
+  background: #99fe5f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3560fc; }
+  background: #d54c03; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #693b9d; }
+  background: #8ea325; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #15b283; }
+  background: #7e63a0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #df1c4b; }
+  background: #d934a4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4b7cda; }
+  background: #c79a95; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8fc018; }
+  background: #bfec9b; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bb5f5c; }
+  background: #a403e8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ccfff4; }
+  background: #daa5b2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8d74c8; }
+  background: #8b65b2; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #102e69; }
+  background: #85ed14; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cca481; }
+  background: #2bec53; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #e9d045; }
+  background: #cc1776; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #625f96; }
+  background: #b8fb7e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #7ce6dc; }
+  background: #385938; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15298,7 +15298,7 @@ option {
 
 .four-dropdwon-div {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
   grid-gap: 10px; }
 
 @media screen and (max-width: 767px) {
