--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #259514; }
+  background: #0bfe5d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c035c0; }
+  background: #90bd42; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4076b0; }
+  background: #77db35; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #75753e; }
+  background: #e413d0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #992f15; }
+  background: #df5563; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2a2ced; }
+  background: #683df2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f64c18; }
+  background: #9a8aea; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5fdd56; }
+  background: #2c44fa; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b6a7f6; }
+  background: #6e92bf; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b2d9b1; }
+  background: #158d07; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #67f995; }
+  background: #07ca79; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a67fc1; }
+  background: #296010; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a70be9; }
+  background: #d2a479; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e7ea1f; }
+  background: #b53ed4; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #878615; }
+  background: #7b0502; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #d51a1b; }
+  background: #e0323b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ce849a; }
+  background: #970ae1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d79cc9; }
+  background: #916aeb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #978285; }
+  background: #d36c48; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #bcc692; }
+  background: #b57040; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #66b3d7; }
+  background: #544c75; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #7c9de4; }
+  background: #27e106; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #21ad24; }
+  background: #09c63d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e5dbef; }
+  background: #ec4fad; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1a308e; }
+  background: #481b1c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #543cd1; }
+  background: #c881cd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #359ad9; }
+  background: #0a2ea1; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #8bda98; }
+  background: #d9c14d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #fc7f3c; }
+  background: #0b77e1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e4b9a2; }
+  background: #f83e17; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2b7175; }
+  background: #f2cb9d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #5ec9fa; }
+  background: #40c366; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #294f54; }
+  background: #d0d1cd; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9f4c5d; }
+  background: #325d60; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1e265c; }
+  background: #2a6f5f; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d86239; }
+  background: #39765a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b04ee1; }
+  background: #cb0787; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e3b923; }
+  background: #6f66a4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7c3e90; }
+  background: #f1f3e1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #13ca27; }
+  background: #3d8508; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d6e3f3; }
+  background: #a6461b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ce62b6; }
+  background: #b23f1c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5b3e99; }
+  background: #02b248; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #06c2aa; }
+  background: #b48161; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #cfda7f; }
+  background: #6e1b84; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #926921; }
+  background: #e77995; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #199281; }
+  background: #8df021; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #1879c5; }
+  background: #15a450; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #a24cc6; }
+  background: #908247; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #810b24; }
+  background: #f3bd44; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ea3440; }
+  background: #aa2fc5; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b0f733; }
+  background: #3a62bf; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a7a199; }
+  background: #69793d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #645e7c; }
+  background: #756bc1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #515435; }
+  background: #c57ec2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #86f82d; }
+  background: #c2efb3; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #69704a; }
+  background: #a77ca6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ac2040; }
+  background: #881e6b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2672d5; }
+  background: #7b77cf; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #e496b3; }
+  background: #3b1d14; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #bcba4b; }
+  background: #887b50; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ee2e79; }
+  background: #f3e26d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #cd2b8c; }
+  background: #5d442e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3c02f6; }
+  background: #f0d8e9; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #357a71; }
+  background: #544db1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3e7461; }
+  background: #f149da; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b9302d; }
+  background: #6b8ba9; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a0cbce; }
+  background: #33fc5e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #80099b; }
+  background: #2a93ee; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #533aea; }
+  background: #b0a404; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b0e572; }
+  background: #bc7b68; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #248f16; }
+  background: #366750; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0593ed; }
+  background: #bd37aa; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #284d37; }
+  background: #275cab; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8c56be; }
+  background: #2de1e5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a85ac4; }
+  background: #2d907e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f2e614; }
+  background: #e171c9; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #baeea2; }
+  background: #82b054; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #725f2e; }
+  background: #2a89a8; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1a2d97; }
+  background: #294a28; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ecc0e1; }
+  background: #03974d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #9cc9cc; }
+  background: #875d85; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #db3093; }
+  background: #4dc69f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2c7c5b; }
+  background: #07c570; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #af1fa3; }
+  background: #1b1ce9; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #99fe5f; }
+  background: #15cbba; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d54c03; }
+  background: #62582b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #8ea325; }
+  background: #e2be32; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #7e63a0; }
+  background: #85ddc7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #d934a4; }
+  background: #431e36; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #c79a95; }
+  background: #bb38a5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #bfec9b; }
+  background: #9b4cbc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a403e8; }
+  background: #095a11; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #daa5b2; }
+  background: #70df30; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8b65b2; }
+  background: #d9d056; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #85ed14; }
+  background: #caebf1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2bec53; }
+  background: #7c2a5b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #cc1776; }
+  background: #0cfa6d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b8fb7e; }
+  background: #797d02; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #385938; }
+  background: #ae2e93; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -15307,6 +15307,12 @@ option {
     margin-bottom: 25px; }
     .four-dropdwon-div .form-group {
       margin-bottom: 0px; }
+
+  .summary-details-row .hidden {
+    display: none !important; }
+
+  .theme-btn-b {
+    width: 100%; }
 
   .system-settings-wrapper {
     flex-direction: column; }
